
    YARN-4132. Separate configs for nodemanager to resourcemanager connection
    timeout and retries (Chang Li via jlowe)

    YARN-4492. Add documentation for preemption supported in Capacity
    scheduler (Naganarasimha G R via jlowe)

    YARN-4653. Document YARN security model from the perspective of
    Application Developers. (Steve Loughran via jianhe)

    YARN-4761. NMs reconnecting with changed capabilities can lead to wrong cluster
    resource calculations on fair scheduler. (Sangjin Lee via zxu)

    YARN-3844. Make hadoop-yarn-project Native code -Wall-clean (Alan Burlison
    via Colin P. McCabe)

    YARN-3722. Merge multiple TestWebAppUtils into o.a.h.yarn.webapp.util.TestWebAppUtils.
    (Masatake Iwasaki via devaraj)

    YARN-3684. Changed ContainerExecutor's primary lifecycle methods to use a more
    extensible mechanism of context objects. (Sidharta Seethana via vinodkv)

    YARN-4004. container-executor should print output of docker logs if the docker
    container exits with non-0 exit status. (Varun Vasudev via xgong)

  OPTIMIZATIONS

  BUG FIXES

    YARN-3305. Normalize AM resource request on app submission. (Rohith Sharmaks
    via jianhe)

    YARN-4706. UI Hosting Configuration in TimelineServer doc is broken. (Akira AJISAKA via gtcarrera9)

    YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to 
    fully qualified path. (Xuan Gong via junping_du)

    YARN-3383. AdminService should use "warn" instead of "info" to log exception 
    when operation fails. (Li Lu via wangda)

    YARN-3425. NPE from RMNodeLabelsManager.serviceStop when 
    NodeLabelsManager.serviceInit failed. (Bibin A Chundatt via wangda)

    YARN-3435. AM container to be allocated Appattempt AM container shown as null.
    (Bibin A Chundatt via xgong)

    YARN-2666. TestFairScheduler.testContinuousScheduling fails Intermittently.
    (Zhihai Xu via ozawa)
